--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <nav class="topNav">
+    <div class="logo">
+      <a href="#">Stack Overflow Clone</a>
+    </div>
+    <div class="links">
+      <a href="#">Sign Up</a>
+      <a href="#">Log In</a>
+    </div>
+  </nav>
 
 <%= yield %>
 
