--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Tags#index</h1>
-<p>Find me in app/views/tags/index.html.erb</p>
+<ul>
+  <%= @tags.each do |tag| %>
+    <li><%= tag.title %></li>
+  <% end %>
+</ul>
