--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -5,3 +5,8 @@ textarea, input[type^="text"] {
   display: block;
   margin: 16px;
 }
+
+.card {
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  padding: 20px 30px;
+}
