--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,1 +1,13 @@
-<h1>HELLO WORLD</h1>
+<h1>Questions</h1>
+<%= link_to "Ask New Question", controller: "questions", action: "new" %>
+<ul style="display:flex; flex-wrap: wrap; justify-content: space-between;">
+  <% @questions.each do |question| %>
+    <li style="display:block; width: 48%; padding: 20px 30px; box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);">
+      <%= link_to question.title,question_path(question) %>
+      <!-- <h2><%= question.title %></h2> -->
+      <p>
+        <%= question.content %>
+      </p>
+    </li>
+  <% end %>
+</ul>
