--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,28 +1,50 @@
 <%= link_to "Ask New Question", controller: "questions", action: "new" %>
-<p>
-  <strong>Title:</strong>
-  <%= @question.title %>
-</p>
+<%= link_to "See all Questions", controller: "questions", action: "index" %>
+<div class="card">
+  <p>
+    <strong>Title:</strong>
+    <%= @question.title %>
+  </p>
 
-<p>
-  <strong>Text:</strong>
-  <%= @question.content %>
-</p>
-<p>
-  <h2>Tags</h2>
-  <%= @question.tag_list %>
-</p>
+  <p>
+    <strong>Text:</strong>
+    <%= @question.content %>
+  </p>
+  <p>
+    <h2>Tags</h2>
+    <%= @question.tag_list %>
+  </p>
+</div>
 <%= form_for :answer, url: question_answers_path(@question) do |f| %>
 <p>
-  <%= f.label :body %><br>
+  <%= f.label "Answer" %><br>
   <%= f.text_area :body %>
 </p>
 <p>
   <%= f.submit %>
 </p>
 <% end %>
-<ul>
+<ul style="list-style-type:none;">
 <% @answers.each do |answer| %>
-  <li><%= answer %></li>
+  <li style="padding: 20px 30px; box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);">
+    <%= answer[1] %>
+    <%= form_for :comment, url: question_answer_comments_path(@question, answer) do |f| %>
+    <p>
+      <%= f.label "Reply to Answer" %><br>
+      <%= f.text_area :body %>
+    </p>
+    <p>
+      <%= f.submit %>
+    </p>
+    <% end %>
+    <% @comments = Comment.where(answer_id: params[:id], answer_id: answer[0]).pluck(:body) %>
+    <ul>
+      <% @comments.each do |comment|  %>
+        <li style="box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);">
+          <%= comment %>
+        </li>
+      <% end %>
+    </ul>
+  </li>
 <% end %>
 </ul>
