--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -14,6 +14,10 @@
     <h2>Tags</h2>
     <%= @question.tag_list %>
   </p>
+  <p>
+    <%= @votes.length %>
+  </p>
+  <%= link_to "Upvote", controller: "votes", action: "upvote", id:@question.id %>
 </div>
 <%= form_for :answer, url: question_answers_path(@question) do |f| %>
 <p>
