Working sign-up form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,11 @@
     </nav>
   </header>
   <main>
+    <% flash.each do |message_type, message| %>
+      <p><%= message %></p>
+    <% end %>
     <%= yield %>
+    <%= debug(params) %>
   </main>
 
 </body>
