--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,14 @@
         <a href="#">Stack Overflow Clone</a>
       </div>
       <div class="links">
-        <a href="#">Sign Up</a>
-        <a href="#">Log In</a>
+        <% if logged_in? %>
+          <%= link_to "Create Question", new_question_path %>
+          <%= link_to "Profile", current_user %>
+          <%= link_to "Log Out", logout_path, method: "delete" %>
+        <% else %>
+          <%= link_to "Sign Up", new_user_path %>
+          <%= link_to "Log In", login_path %>
+        <% end %>
       </div>
     </nav>
   </header>
