--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -18,6 +18,7 @@
     <%= link_to "Edit", edit_question_path(@question) %>
   <% end %>
   <p>
+    <%= @total_votes %>
     <%= @upvotes.length %>
     <%= @downvotes.length %>
     <%= @upvotes.length-@downvotes.length %>
