--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -16,6 +16,7 @@
   </p>
   <% if logged_in? && session[:user_id] == @question.user_id %>
     <%= link_to "Edit", edit_question_path(@question) %>
+    <%= link_to "Delete", question_path(@question), method: :delete, data: {confirm: "This can not be undone"} %>
   <% end %>
   <p>
     <%= @total_votes %>
