--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,13 +1,29 @@
 <h1>Questions</h1>
 <%= link_to "Ask New Question", controller: "questions", action: "new" %>
-<ul style="display:flex; flex-wrap: wrap; justify-content: space-between;">
+<!-- <ul style="display:flex; flex-wrap: wrap; justify-content: space-between;" -->
+  <ul class="questions_indexList">
   <% @questions.each do |question| %>
-    <li style="display:block; width: 48%; padding: 20px 30px; box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);">
-      <%= link_to question.title,question_path(question) %>
-      <!-- <h2><%= question.title %></h2> -->
-      <p>
+    <!--    <li style="display:block; width: 48%; padding: 20px 30px; box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);"> -->
+      <li class="questions_listItem">
+        <%= link_to question_path(question), :class => 'question_title' do%>
+          <p><%= question.title %></p>
+        <% end %>
+      <p class="question_content" >
         <%= question.content %>
       </p>
+      <div class="question_actions">
+      <% if logged_in? && session[:user_id] == question.user_id %>
+        <%= link_to edit_question_path(question), :class => 'action_link'  do %>
+          <i class="fa fa-edit"></i>
+        <% end %>
+        <%= link_to question_path(question), method: :delete, data: {confirm: "This can not be undone"}, :class => 'action_link'  do %>
+          <i class="fa fa-trash"></i>
+        <% end %>
+      <% else %>
+        <div class="action_link disabled"><i class="fa fa-edit"></i></div>
+        <div class="action_link disabled"><i class="fa fa-trash"></i></div>
+      <% end %>
+      </div>
     </li>
   <% end %>
 </ul>
