--- a/app/views/answers/edit.html.erb
+++ b/app/views/answers/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Answers#update</h1>
-<p>Find me in app/views/answers/update.html.erb</p>
+<%= form_for @answer do |f| %>
+  <%= f.fields_for :comments, @new_comment do |comment| %>
+    Comment: <%= comment.text_field :body %>
+  <% end %>
+  <%= f.submit %>
+<% end %>
