--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Tags#show</h1>
-<p>Find me in app/views/tags/show.html.erb</p>
+<ul>
+  <% @qs.each do |q| %>
+    <li><%= q.title %>
+  <% end %>
+</ul>
